# minifb

./: CMakeLists.txt  LICENSE  README.md  generic-cross-gcc-toolchain.cmake  version.rc.in
include/: MiniFB.h  MiniFB_enums.h  MiniFB_export.h  MiniFB_ios.h  MiniFB_types.h  MiniFB_version.h
src/: MiniFB_common.c  MiniFB_internal.h  MiniFB_version.c  WindowData.h
src/android/: AndroidMiniFB.c
src/ios/: WindowData_IOS.h  iOSMiniFB.m
src/macosx/: MacMiniFB.m  OSXWindow.m  WindowData_OSX.h
src/wayland/: WaylandMiniFB.c  WindowData_Way.h
src/web/: WebMiniFB.c
src/windows/: WinMiniFB.c  WindowData_Win.h
src/x11/: WindowData_X11.h  X11MiniFB.c
